@@ -27,6 +27,9 @@ $ -> Language fix or change
 - -> Removed
 ! -> Note
 
+05-Nov-2010 Mark Dexter
+# Fix failing system tests for ACL language changes
+
 01-Nov-2010 Mark Dexter
 # Fix doInstall so it can be run against a different Joomla! instance
 # Small fix for featured0001Test due to default ordering in Featured Articles Manager
